Start adapting stuff below src

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,9 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>tmfpak</display-name>
+  <display-name>tmfcore_war</display-name>
+
+  <!-- maybe not needed, maybe yes
   <listener>
 	<listener-class>it.polito.tellmefirst.web.rest.TMFListener</listener-class>
   </listener>
@@ -12,19 +14,20 @@
 	<param-name>conf_file_path</param-name>
 	<param-value>./conf/server.properties</param-value>
   </context-param>
+  -->
 
   <servlet>
     <servlet-name>Jersey REST Service</servlet-name>
     <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>it.polito.tellmefirst.web.rest.services</param-value>
+      <param-value>it.polito.tellmefirst.http</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
     <servlet-name>Jersey REST Service</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
+    <url-pattern>/core/*</url-pattern>
   </servlet-mapping>
 
 </web-app>
