--- a/tmfcore_war/pom.xml
+++ b/tmfcore_war/pom.xml
@@ -16,6 +16,17 @@
       <artifactId>tmfcore</artifactId>
       <version>2.0.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-runner</artifactId>
+      <version>9.2.3.v20140905</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.containers</groupId>
+      <artifactId>jersey-container-servlet</artifactId>
+      <version>2.13</version>
+      <scope>import</scope>
+    </dependency>
   </dependencies>
 
   <build>
