--- a/tmfcore_war/src/main/webapp/WEB-INF/web.xml
+++ b/tmfcore_war/src/main/webapp/WEB-INF/web.xml
@@ -18,9 +18,9 @@
 
   <servlet>
     <servlet-name>Jersey REST Service</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
-      <param-name>com.sun.jersey.config.property.packages</param-name>
+      <param-name>jersey.config.server.provider.packages</param-name>
       <param-value>it.polito.tellmefirst.http</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
