--- a/tmfcore_war/src/main/webapp/WEB-INF/web.xml
+++ b/tmfcore_war/src/main/webapp/WEB-INF/web.xml
@@ -10,24 +10,32 @@
 	<listener-class>it.polito.tellmefirst.web.rest.TMFListener</listener-class>
   </listener>
 
-  <context-param>
-	<param-name>conf_file_path</param-name>
-	<param-value>./conf/server.properties</param-value>
-  </context-param>
-  -->
+    <context-param>
+          <param-name>conf_file_path</param-name>
+          <param-value>./conf/server.properties</param-value>
+    </context-param>
+    -->
 
-  <servlet>
-    <servlet-name>Jersey REST Service</servlet-name>
-    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-    <init-param>
-      <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>it.polito.tellmefirst.http</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Jersey REST Service</servlet-name>
-    <url-pattern>/core/*</url-pattern>
-  </servlet-mapping>
+    <!--  <servlet>
+      <servlet-name>Jersey REST Service</servlet-name>
+      <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+      <init-param>
+        <param-name>jersey.config.server.provider.packages</param-name>
+        <param-value>it.polito.tellmefirst.http</param-value>
+      </init-param>
+      <load-on-startup>1</load-on-startup>
+    </servlet>-->
+    <servlet>
+        <servlet-name>javax.ws.rs.core.Application</servlet-name>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>javax.ws.rs.core.Application</servlet-name>
+        <url-pattern>/*</url-pattern>
+    </servlet-mapping>
+<!--    <servlet-mapping>
+        <servlet-name>Jersey REST Service</servlet-name>
+        <url-pattern>/core/*</url-pattern>
+    </servlet-mapping>-->
 
 </web-app>
