Update the pom.xml files
- Update toplevel pom.xml: the artifact name has changed.

- tmcore_war/pom.xml: add tmfcore_jaxrs as module.

- tmfcore_war/pom.xml: set final name to tmfcore.war because Tomcat
  fails if the artifact name contains an underscore.

- tmfcore_war/pom.xml: use Jersey 2.13 which is the latest version.

- tmfcore_jaxrs/pom.xml: remove white spaces in otherwise
  empty line.

--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,14 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.polito.tellmefirst</groupId>
-  <artifactId>tmfcore_build</artifactId>
+  <artifactId>tmfcore_build_war</artifactId>
   <version>2.0.0.0</version>
-  <name>tmfcore build</name>
+  <name>tmfcore build war</name>
   <packaging>pom</packaging>
 
   <modules>
    <module>tmfcore</module>
+   <module>tmfcore_jaxrs</module>
    <module>tmfcore_war</module>
   </modules>
 
