--- a/tmfcore_war/pom.xml
+++ b/tmfcore_war/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>jersey-container-servlet</artifactId>
             <version>2.7</version>
         </dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>2.13</version>
+		</dependency>
     </dependencies>
 
     <build>
