--- a/tmfcore_jaxrs/pom.xml
+++ b/tmfcore_jaxrs/pom.xml
@@ -32,6 +32,7 @@
 					<showWarnings>true</showWarnings>
 					<source>1.8</source>
 					<target>1.8</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
