web.xml: add listener entry for Jetty
Apparently Jetty is not able to honor the @WebListener annotation
so we need to add a <listener> field to make it work.

Tested both using Jetty and Tomcat 8.

--- a/tmfcore_war/src/main/webapp/WEB-INF/web.xml
+++ b/tmfcore_war/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 <web-app>
   <display-name>tmfcore_war</display-name>
 
+    <!-- Jetty 9.2.5 does not support @WebListener: -->
+    <listener>
+        <listener-class>it.polito.tellmefirst.jaxrs.ClassifyListener</listener-class>
+    </listener>
+
     <servlet>
         <servlet-name>javax.ws.rs.core.Application</servlet-name>
     </servlet>
